- New HTTP Handlers for ASP.Net
 - DatasetHandler for serving RDF datasets
- Additional Configuration API for new features
 - dnr:SparqlDataset and dnr:usingDataset properties
- Query
 - GROUP BY is now supported in subqueries
 - Scalar Arguments for aggregates added when in 1.1 Extended mode (only GROUP_CONCAT allows scalar arguments in 1.1 mode)
 - Added new SPARQL 1.1 functions
  - General Functions - 
  - Date Time Functions - 
- Storage
 - Expanded the IGenericIOManager interface to include methods for deletings graphs and listing graphs
 - Connector for Fuseki
 - Connector which wraps an in-memory store (i.e. a IInMemoryQueryableStore) or a SPARQL dataset (i.e. a ISparqlDataset)
 - Connector which wraps any IGenericIOManager and makes it read-only
- New HtmlSchemaWriter outputs HTML versions of ontologies in a schema specification style rather than as a table like the existing HtmlWriter

Changed
- Bug Fixes
 - Notation 3 Parser allows variable quantification directives in Graph Literals
 - Queries with a LIMIT modifier containing FILTERs were optimised for lazy evaluation but would return incorrect results
   in some cases
 - Queries with a DISTINCT modifer and a LIMIT were optimised for lazy evaluation when they shouldn't have been
 - Queries containing GRAPH clauses no longer unintentionally introduce a Product in some places
 - RDF/XML parser now correctly treats empty elements with rdf:datatype as literal properties rather than empty properties
 - SPARQL Query Parser now parses correctly if first item in the WHERE clause is a nested graph pattern
 - Non-Leviathan Query Processors record the time the Query took to execute
- General Improvements
 - Internal restructuring of how MIME Types are managed
  - Allows for new MIME Types, File Extensions and parsers to be registered with the API and used automatically where appropriate
 - Can use dotnetrdf:default-graph as a URI to explicitly access the default unnamed graph in a SPARQL dataset
- Parsing